Changed how ibx load visibility works...now you can stop it from becomming visible on load and reveal it at a later time.

--- a/src/main/resources/META-INF/resources/ibx/resources/css/base.ibx.css
+++ b/src/main/resources/META-INF/resources/ibx/resources/css/base.ibx.css
@@ -46,7 +46,14 @@ body
 {
 	visibility:hidden;
 }
-.ibx-root.ibx-loaded
+
+/*ibx is fully loaded*/
+.ibx-loaded
+{
+}
+
+/*any ibx root nodes will no longer be explicitly hidden*/
+.ibx-root.ibx-visible
 {
 	visibility:inherit;
 }
